--- a/my-app/src/pages/Education/Education.css
+++ b/my-app/src/pages/Education/Education.css
@@ -1,7 +1,7 @@
 .EducationPage {
     width: 100%;
     height: 800px;
-    margin-top: 30px;
+    margin-top: 10%;
     /* background-color: thistle; */
 }
 
