--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -4,12 +4,17 @@
   url("../../background-AboutMe.png");
   background-size: 100% 100%;
   width: 100%;
-  height: 119vh;
+  height: 100vh;
 }
 
+
+.animationAboutMe{
+    width: 490px;
+    height: 300px;
+}
 .AboutMeTitle {
     width: 50%;
-    height: 25vh;
+    height: 20%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -27,6 +32,7 @@ color: #FFFFFF;
 
 .description-container {
     display: flex;
+    height: 38%;
     
 }
 
@@ -45,59 +51,106 @@ color: #FFFFFF;
 }
 
 .myPhoto {
-    width: 40%;
-    display: flex; 
-    justify-content: center;
-    align-items: center;
+        width: 40%;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
 }
 .Photo {
-    border-radius: 177px;
-    width: 200px;
+        border-radius: 177px;
+        width: 200px;
 }
+
+
+
+/* Animations */
+
+#arrow-right{
+        animation: Arrow infinite ;
+        animation-duration: 1.4s;
+        animation-timing-function:linear; 
+        animation-direction: alternate;
+}
+
+#arrow-left{
+        animation: ArrowLeft infinite ;
+        animation-duration: 1.4s;
+        animation-timing-function: linear;
+        animation-direction: alternate;
+}
+
+@keyframes Arrow {
+    from{
+        transform: translateX(0);
+    }
+
+    to{
+        transform: translateX(-5%);
+    }
+}
+
+@keyframes ArrowLeft {
+    from{
+        transform: translateX(0);
+    }
+
+    to{
+        transform: translateX(5%);
+    }
+}
+
+/* Media Querie */
 
 
 @media only screen and (max-width: 700px) {
 
     .AboutMeTitle h2 {
-        font-size: 35px;
+            font-size: 35px;
     }
 
     .description-text{
-        font-size: 14px;
-        margin: 50px 80px 50px 80px;
+            font-size: 12px;
+            margin: 50px 80px 50px 80px;
     }
 
-}
+}; 
 
 @media only screen and (max-width: 600px)  {
     .AboutMeTitle h2 {
-        font-size: 24px;
+            font-size: 24px;
     }
 
+    /* .animationAboutMe {
+        width: 290px;
+        height: 100px;
+} */
+
     .description-container {
-        display: flex;
-        flex-direction: column;
+            display: flex;
+            flex-direction: column;
         
     }
 
     .myPhoto {
-        width: 100%;
-        display: flex; 
-        justify-content: center;
-        align-items: center;
+            width: 100%;
+            display: flex; 
+            justify-content: center;
+            align-items: center;
     }
 
     .Photo {
-        border-radius: 177px;
-        width: 150px;
+            border-radius: 177px;
+            width: 150px;
     }
 
     .description-text{
-        font-size: 14px;
-        margin: 30px 50px 30px 50px;
+            font-size: 10px;
+            margin: 30px 50px 30px 50px;
     }
 
     .description-text{
-        width: 80%;
+              width: 80%;
     }
+
+
 }
