--- a/my-app/src/pages/home/Home.css
+++ b/my-app/src/pages/home/Home.css
@@ -3,24 +3,26 @@
 }
 
 #circle1 {
-    animation: Dots ease-in-out   infinite ;
-   height: 65px;
-   animation-duration: 1.4s;
-   animation-timing-function: linear;
+        animation: Dots ease-in-out   infinite ;
+        height: 65px;
+        animation-duration: 1.4s;
+        animation-timing-function: linear;
+        animation-direction: alternate;
 }
 #circle2 {
-    animation: Dots   infinite ;
-    animation-duration: 1.4s;
-   animation-timing-function: linear;
-
-    animation-delay: 0.4s;
+        animation: Dots   infinite ;
+        animation-duration: 1.4s;
+        animation-timing-function: linear;
+        animation-direction: alternate;
+        animation-delay: 0.4s;
     
 }
 #circle3 {
-    animation: Dots   infinite ;
-    animation-duration: 1.4s;
-   animation-timing-function: linear;
-    animation-delay: 0.8s;
+        animation: Dots   infinite ;
+        animation-duration: 1.4s;
+        animation-timing-function: linear;
+        animation-delay: 0.8s;
+        animation-direction: alternate;
 }
 
 @keyframes Dots {
@@ -29,6 +31,6 @@
     }
 
     to{
-        transform: translateY(20%);
+        transform: translateY(25%);
     }
 }
