--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,29 +1,22 @@
-
-
 * {
   margin: 0px;
-  padding: 0; 
+  padding: 0;
   width: 100%;
- 
 }
-
 
 .presentation-page {
   width: 100%;
   display: flex;
   flex-direction: column;
-
 }
-.header{
+.header {
   display: flex;
-  background-image:
-  url("./header-background4.png");
+  background-image: url("./header-background4.png");
   background-size: 100% 100%;
- /* background-size: cover; */
- 
+  /* background-size: cover; */
+
   width: 100%;
   height: 100px;
-
 }
 
 .content-section {
@@ -35,7 +28,6 @@
 
 .presentation-section-left {
   margin-left: 60px;
-  
 }
 
 .logo-section-right {
@@ -44,14 +36,12 @@
   flex-direction: column;
   align-items: flex-end;
   margin-right: 60px;
-  
-
 }
 .layout-right {
-width: 90%;
-height: 550.16px;
-margin-right: 40px;
-/* margin-top: 40px; */
+  width: 90%;
+  height: 550.16px;
+  margin-right: 40px;
+  /* margin-top: 40px; */
 }
 
 .menue-section {
@@ -59,11 +49,11 @@ margin-right: 40px;
   justify-content: flex-end;
   margin-right: 60px;
 }
-.menue-button{
+.menue-button {
   width: 59px;
-height: 50px;
-margin-right: 80px;
-margin-top: 35px;
+  height: 50px;
+  margin-right: 80px;
+  margin-top: 35px;
 }
 
 .name-setion {
@@ -74,7 +64,6 @@ margin-top: 35px;
   text-align: center;
   color: white;
   margin-left: 60px;
-  
 }
 .name-setion h3 {
   position: absolute;
@@ -82,11 +71,10 @@ margin-top: 35px;
   top: 45px;
   font-family: Saira Condensed;
   font-style: normal;
-  
 }
 .name-layout {
   width: 250px;
-  height: 80px; 
+  height: 80px;
   margin-top: 4%;
 }
 
@@ -98,41 +86,39 @@ margin-top: 35px;
   margin-top: 60px;
 }
 .hello-section h1 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-style: normal;
-font-weight: 450;
-font-size: 43px;
-line-height: 101px;
-text-align: center;
-width: 80%;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 450;
+  font-size: 43px;
+  line-height: 101px;
+  text-align: center;
+  width: 80%;
 
-color: #432AB0;
+  color: #432ab0;
 
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .scroll-down-section {
   height: 20%;
   width: 100%;
   display: flex;
-  
-  align-items: center;
 
+  align-items: center;
 }
 
 .scroll-down-section h2 {
-  
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 47px;
-display: flex;
-justify-content: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 47px;
+  display: flex;
+  justify-content: center;
 
-
-
-color: #6A57BF;
+  color: #6a57bf;
 }
 
 .bottom-layout-section {
@@ -140,64 +126,62 @@ color: #6A57BF;
   display: flex;
   justify-content: center;
   /* align-items: center; */
-
-  
 }
 
-.bottom-layout { 
+.bottom-layout {
   width: 140px;
-height: 39px;
+  height: 39px;
 }
-
-
-
-
 
 @media only screen and (max-width: 900px) {
-
   .layout-right {
     width: 100%;
     height: 450.16px;
     margin-right: 30px;
   }
   .hello-section h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 101px;}
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 101px;
+  }
 
   .scroll-down-section h2 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
-    line-height: 47px;}
-  
-    .bottom-layout { 
+    line-height: 47px;
+  }
+
+  .bottom-layout {
     width: 100px;
     height: 29px;
-    }
+  }
 
-   .logo-section-right {
+  .logo-section-right {
     margin-right: 30px;
-   }
+  }
 
-   .presentation-section-left {
-    margin-left: 30px;}
-  
-    .menue-button {
+  .presentation-section-left {
+    margin-left: 30px;
+  }
+
+  .menue-button {
     width: 49px;
     height: 40px;
     margin-right: 60px;
     margin-top: 25px;
-    }
+  }
 
-    .name-layout {
-      width: 200px;
-      height: 70px; 
-      margin-top: 2%;
-    }
+  .name-layout {
+    width: 200px;
+    height: 70px;
+    margin-top: 2%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -209,10 +193,9 @@ height: 39px;
   .logo-section-right {
     margin-right: 10px;
     margin-top: 30px;
-    
-   }
+  }
 
-   .layout-right {
+  .layout-right {
     width: 100%;
     height: 450.16px;
     margin-right: 0px;
@@ -223,37 +206,38 @@ height: 39px;
   }
 
   .presentation-section-left {
-    margin-left: 0px;}
+    margin-left: 0px;
+  }
 
-    .hello-section {
-      margin-top: 30px;
-    }
+  .hello-section {
+    margin-top: 30px;
+  }
 
-    .scroll-down-section {
-      margin-top: 30px;
-    }
+  .scroll-down-section {
+    margin-top: 30px;
+  }
 
-    .bottom-layout-section {
-      margin-top: 30px;
-    }
-    
-    .menue-button {
-      width: 39px;
-      height: 30px;
-      margin-right: 20px;
-      margin-top: 20px;
-      }
+  .bottom-layout-section {
+    margin-top: 30px;
+  }
 
-      .name-layout {
-        width: 150px;
-        height: 60px; 
-        margin-top: 2%;
-      }
-      .name-setion {
-        margin-left: 0px;
-      }
+  .menue-button {
+    width: 39px;
+    height: 30px;
+    margin-right: 20px;
+    margin-top: 20px;
+  }
 
-      .menue-section {
-        margin-right: 0px;
-      }
+  .name-layout {
+    width: 150px;
+    height: 60px;
+    margin-top: 2%;
+  }
+  .name-setion {
+    margin-left: 0px;
+  }
+
+  .menue-section {
+    margin-right: 0px;
+  }
 }
