--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -1,156 +1,145 @@
 .page2-content {
-    background-image:
-    
-  url("../../background-AboutMe.png");
+  background-image: url("../../background-AboutMe.png");
   background-size: 100% 100%;
   width: 100%;
   height: 100vh;
 }
 
-
-.animationAboutMe{
-    width: 490px;
-    height: 300px;
+.animationAboutMe {
+  width: 490px;
+  height: 300px;
 }
 .AboutMeTitle {
-    width: 50%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+  width: 50%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 .AboutMeTitle h2 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 48px;
-line-height: 76px;
-text-align: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 76px;
+  text-align: center;
 
-color: #FFFFFF;
+  color: #ffffff;
 }
 
 .description-container {
-    display: flex;
-    height: 38%;
-    
+  display: flex;
+  height: 38%;
 }
 
 .description-text {
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-style: normal;
-font-weight: lighter;
-font-size: 20px;
-line-height: 40px;
-text-align: center;
-width: 60%;
-margin: 70px 100px 70px 100px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: normal;
+  font-weight: lighter;
+  font-size: 20px;
+  line-height: 40px;
+  text-align: center;
+  width: 60%;
+  margin: 70px 100px 70px 100px;
 
-
-color: #FFFFFF;
+  color: #ffffff;
 }
 
 .myPhoto {
-        width: 40%;
-        display: flex; 
-        justify-content: center;
-        align-items: center;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .Photo {
-        border-radius: 177px;
-        width: 200px;
+  border-radius: 177px;
+  width: 200px;
 }
-
-
 
 /* Animations */
 
-#arrow-right{
-        animation: Arrow infinite ;
-        animation-duration: 1.4s;
-        animation-timing-function:linear; 
-        animation-direction: alternate;
+#arrow-right {
+  animation: Arrow infinite;
+  animation-duration: 1.4s;
+  animation-timing-function: linear;
+  animation-direction: alternate;
 }
 
-#arrow-left{
-        animation: ArrowLeft infinite ;
-        animation-duration: 1.4s;
-        animation-timing-function: linear;
-        animation-direction: alternate;
+#arrow-left {
+  animation: ArrowLeft infinite;
+  animation-duration: 1.4s;
+  animation-timing-function: linear;
+  animation-direction: alternate;
 }
 
 @keyframes Arrow {
-    from{
-        transform: translateX(0);
-    }
+  from {
+    transform: translateX(0);
+  }
 
-    to{
-        transform: translateX(-5%);
-    }
+  to {
+    transform: translateX(-5%);
+  }
 }
 
 @keyframes ArrowLeft {
-    from{
-        transform: translateX(0);
-    }
+  from {
+    transform: translateX(0);
+  }
 
-    to{
-        transform: translateX(5%);
-    }
+  to {
+    transform: translateX(5%);
+  }
 }
 
 /* Media Querie */
 
-
 @media only screen and (max-width: 700px) {
+  .AboutMeTitle h2 {
+    font-size: 35px;
+  }
 
-    .AboutMeTitle h2 {
-            font-size: 35px;
-    }
+  .description-text {
+    font-size: 12px;
+    margin: 50px 80px 50px 80px;
+  }
+}
 
-    .description-text{
-            font-size: 12px;
-            margin: 50px 80px 50px 80px;
-    }
+@media only screen and (max-width: 600px) {
+  .AboutMeTitle h2 {
+    font-size: 24px;
+  }
 
-}; 
-
-@media only screen and (max-width: 600px)  {
-    .AboutMeTitle h2 {
-            font-size: 24px;
-    }
-
-    /* .animationAboutMe {
+  /* .animationAboutMe {
         width: 290px;
         height: 100px;
 } */
 
-    .description-container {
-            display: flex;
-            flex-direction: column;
-        
-    }
+  .description-container {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .myPhoto {
-            width: 100%;
-            display: flex; 
-            justify-content: center;
-            align-items: center;
-    }
+  .myPhoto {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .Photo {
-            border-radius: 177px;
-            width: 150px;
-    }
+  .Photo {
+    border-radius: 177px;
+    width: 150px;
+  }
 
-    .description-text{
-            font-size: 10px;
-            margin: 30px 50px 30px 50px;
-    }
+  .description-text {
+    font-size: 10px;
+    margin: 30px 50px 30px 50px;
+  }
 
-    .description-text{
-              width: 80%;
-    }
-
-
+  .description-text {
+    width: 80%;
+  }
 }
